--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,11 @@ a {
   box-sizing: border-box;
 }
 
+.Main {
+  height: 100%;
+  overflow-y: scroll;
+}
+
 .section {
   height: 100%;
   margin-top: 100px;
