--- a/components/fullpage-horizontal/fullpage-horizontal.module.scss
+++ b/components/fullpage-horizontal/fullpage-horizontal.module.scss
@@ -1,12 +1,13 @@
 .Main {
   height: 100%;
-  overflow-y: scroll;
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
 }
 
 .section {
   height: 100%;
   margin-top: 100px;
-  display: flex;
-  flex-direction: column;
   position: relative;
+  flex: 1 0 100%;
 }
