--- a/components/fullpage-vertical/fullpage-vertical.module.scss
+++ b/components/fullpage-vertical/fullpage-vertical.module.scss
@@ -1,9 +1,8 @@
 .Main {
   height: 100%;
-  // overflow-y: scroll;
+  overflow-y: scroll;
 }
 
 .section {
   height: 100%;
-  margin-top: 100px;
 }
