--- a/components/fullpage-horizontal-hashroute/fullpage-horizontal-hashroute.module.scss
+++ b/components/fullpage-horizontal-hashroute/fullpage-horizontal-hashroute.module.scss
@@ -6,9 +6,8 @@
 }
 
 .section {
-  // height: 100%;
-  margin-top: 100px;
+  height: 100%;
   position: relative;
   flex: 1 0 100%;
-  height: 100%;
+  overflow-y: auto;
 }
