--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,8 @@ a {
 
 .layout {
   width: 100%;
+  margin-top: 100px;
+  height: calc(100% - 100px);
 }
 
 .header {
@@ -45,5 +47,5 @@ a {
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .fullpage-vertical-container::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
 }
