--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -43,6 +43,10 @@ a {
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+
+  section {
+    height: 100%;
+  }
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
