--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,15 @@
+@font-face {
+  font-family: AGaramondPro;
+  src: url("/fonts/AGaramondPro-Regular.otf") format("opentype");
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  // font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  //   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: AGaramondPro;
   height: 100%;
 }
 
@@ -84,6 +90,7 @@ a {
     .MuiTab-root {
       font-size: 0.9rem;
       min-width: 150px;
+      font-family: AGaramondPro;
       @media (min-width: 600px) {
         min-width: 250px;
         font-size: 1.7rem;
