--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -88,9 +88,10 @@ a {
       display: none;
     }
     .MuiTab-root {
-      font-size: 0.9rem;
+      font-size: 0.75rem;
       min-width: 150px;
       font-family: AGaramondPro;
+      letter-spacing: 0.19em;
       @media (min-width: 600px) {
         min-width: 250px;
         font-size: 1.7rem;
