--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,6 +51,10 @@ a {
   width: 100%;
   margin-top: 340px;
   height: calc(100% - 340px);
+  @media (min-width: 600px) {
+    margin-top: 440px;
+    height: calc(100% - 440px);
+  }
 }
 
 .header {
@@ -58,7 +62,19 @@ a {
   top: 0;
   width: 100%;
   height: 340px;
+  @media (min-width: 600px) {
+    height: 440px;
+  }
   // padding: 10px 0;
+  .title {
+    width: 150px;
+    @media (min-width: 600px) {
+      width: 500px;
+    }
+    img {
+      width: 100%;
+    }
+  }
   .cap-complete {
     position: absolute;
     z-index: 1;
@@ -66,7 +82,8 @@ a {
     top: 167px;
     @media (min-width: 600px) {
       width: 250px;
-      top: 110px;
+      top: 180px;
+      left: 70px;
     }
     img {
       width: 100%;
@@ -84,17 +101,21 @@ a {
       margin: 0;
     }
   }
+
   .MuiTabs-root {
     height: 30%;
     width: 100%;
     display: flex;
     flex-flow: row;
-    align-items: center;
     overflow: hidden;
+    align-items: center;
 
     .MuiTabs-flexContainer {
       display: flex;
-      justify-content: center;
+      justify-content: start;
+      @media (min-width: 600px) {
+        justify-content: center;
+      }
       // gap: 20px;
     }
     .MuiTabs-indicator {
@@ -102,7 +123,7 @@ a {
     }
     .MuiTab-root {
       font-size: 0.75rem;
-      min-width: 150px;
+      min-width: 120px;
       font-family: AGaramondPro;
       letter-spacing: 0.19em;
       @media (min-width: 600px) {
