--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -52,8 +52,8 @@ a {
   margin-top: 340px;
   height: calc(100% - 340px);
   @media (min-width: 600px) {
-    margin-top: 440px;
-    height: calc(100% - 440px);
+    margin-top: 500px;
+    height: calc(100% - 500px);
   }
 }
 
@@ -63,7 +63,7 @@ a {
   width: 100%;
   height: 340px;
   @media (min-width: 600px) {
-    height: 440px;
+    height: 500px;
   }
   // padding: 10px 0;
 
@@ -74,7 +74,7 @@ a {
     top: 167px;
     @media (min-width: 600px) {
       width: 250px;
-      top: 180px;
+      top: 220px;
       left: 70px;
     }
     img {
@@ -90,12 +90,17 @@ a {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-content: flex-start;
+    @media (min-width: 600px) {
+      align-content: inherit;
+    }
     h3 {
       margin: 0;
     }
     .title {
       width: 100%;
       order: 3;
+      padding-top: 30px;
       @media (min-width: 600px) {
         order: 2;
         width: 25%;
@@ -105,8 +110,7 @@ a {
       }
     }
     .search-bar {
-      width: 30%;
-      height: 10px;
+      display: flex;
       order: 1;
       @media (min-width: 600px) {
         order: 1;
@@ -114,7 +118,31 @@ a {
         margin-left: 5%;
         align-self: initial;
       }
-    }
+      .search-icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-left: 10px;
+        padding-right: 15px;
+        @media (min-width: 600px) {
+          padding-right: 25px;
+        }
+        .MuiSvgIcon-root {
+          @media (min-width: 600px) {
+            font-size: 3.5rem;
+          }
+          path {
+            fill: rgb(124, 124, 124);
+          }
+        }
+      }
+      .MuiInputBase-root {
+        @media (min-width: 600px) {
+          font-size: 1.7rem;
+        }
+        font-family: AGaramondPro;
+      }
+    } // .search-bar
     .menu-top-header {
       width: 30%;
       align-self: baseline;
@@ -138,7 +166,7 @@ a {
 
     .MuiTabs-flexContainer {
       display: flex;
-      justify-content: start;
+      justify-content: flex-start;
       @media (min-width: 600px) {
         justify-content: center;
       }
@@ -180,9 +208,9 @@ a {
           color: rgb(191, 168, 117);
         }
       }
-    }
-  }
-}
+    } //MuiTab-root
+  } //.MuiTabs-root
+} //.header
 
 #__next {
   height: 100%;
