--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,7 +51,7 @@ a {
   width: 100%;
   margin-top: 340px;
   height: calc(100% - 340px);
-  @media (min-width: 600px) {
+  @media (min-width: 541px) {
     margin-top: 400px;
     height: calc(100% - 400px);
   }
@@ -62,7 +62,7 @@ a {
   top: 0;
   width: 100%;
   height: 340px;
-  @media (min-width: 600px) {
+  @media (min-width: 541px) {
     height: 400px;
   }
   // padding: 10px 0;
@@ -72,7 +72,7 @@ a {
     z-index: 1;
     width: 110px;
     top: 170px;
-    @media (min-width: 600px) {
+    @media (min-width: 541px) {
       width: 130px;
       top: 205px;
       left: 60px;
@@ -96,7 +96,7 @@ a {
     justify-content: space-between;
     flex-wrap: wrap;
     align-content: flex-start;
-    @media (min-width: 600px) {
+    @media (min-width: 541px) {
       align-content: inherit;
     }
     h3 {
@@ -105,7 +105,7 @@ a {
     .title {
       width: 100%;
       order: 3;
-      max-width: 800px;
+      max-width: 500px;
       margin: auto;
       min-width: 280px;
       padding-top: 20px;
@@ -157,11 +157,11 @@ a {
         justify-content: center;
         padding-left: 10px;
         padding-right: 15px;
-        @media (min-width: 600px) {
+        @media (min-width: 541px) {
           padding-right: 25px;
         }
         .MuiSvgIcon-root {
-          @media (min-width: 600px) {
+          @media (min-width: 541px) {
             font-size: 3.5rem;
           }
           path {
@@ -170,7 +170,7 @@ a {
         }
       }
       .MuiInputBase-root {
-        @media (min-width: 600px) {
+        @media (min-width: 541px) {
           font-size: 1.7rem;
         }
         font-family: AGaramondPro;
@@ -193,13 +193,13 @@ a {
         align-items: center;
         flex-direction: column;
         font-size: 0.7rem;
-        @media (min-width: 600px) {
+        @media (min-width: 541px) {
           font-size: 1rem;
         }
         img {
           width: 100%;
           padding: 5px;
-          @media (min-width: 600px) {
+          @media (min-width: 541px) {
             padding: 10px;
           }
         }
@@ -219,10 +219,14 @@ a {
     overflow: hidden;
     align-items: center;
 
+    // @media (min-width: 541px) {
+    //   height: 30%;
+    // }
+
     .MuiTabs-flexContainer {
       display: flex;
       justify-content: flex-start;
-      @media (min-width: 600px) {
+      @media (min-width: 541px) {
         justify-content: center;
       }
       // gap: 20px;
@@ -235,7 +239,7 @@ a {
       min-width: 120px;
       font-family: AGaramondPro;
       letter-spacing: 0.19em;
-      @media (min-width: 600px) {
+      @media (min-width: 541px) {
         min-width: 250px;
         font-size: 1.7rem;
       }
@@ -281,7 +285,7 @@ a {
 .fullpage-base-container::-webkit-scrollbar {
   width: 6px; /* width of the entire scrollbar */
   height: 6px;
-  @media (min-width: 600px) {
+  @media (min-width: 541px) {
     width: 20px; /* width of the entire scrollbar */
     height: 20px;
   }
@@ -295,7 +299,7 @@ a {
   // background-color: rgb(237, 235, 230); /* color of the scroll thumb */
   border-radius: 20px; /* roundness of the scroll thumb */
   border: 1px solid rgb(237, 235, 230); /* creates padding around scroll thumb */
-  @media (min-width: 600px) {
+  @media (min-width: 541px) {
     border: 3px solid rgb(237, 235, 230); /* creates padding around scroll thumb */
   }
 }
